@startuml
'https://plantuml.com/class-diagram

class Client{
}

abstract class CarModel{

    public abstract void start();

    public abstract void stop();

    public abstract void alarm();

    public abstract void engineBoom();

    public  void run();
}
note top : 车的模型

class Ferrari911{
}
note top : 车辆种类1

class Ferrari812{
}
note top : 车辆种类2



Ferrari911 --|> CarModel

Ferrari812 --|> CarModel

Client ..> CarModel

@enduml